<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddEditAddressActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_edit_address_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/app_gradient_color_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="@dimen/toolbar_title_paddingStart"
                android:paddingEnd="0dp"
                android:text="@string/title_add_address"
                android:textColor="@color/white"
                android:textSize="@dimen/toolbar_title_text_size"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_add_edit_address_activity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_full_name"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <sjsu.cmpe277arshia.offermaze.utils.EditText
                        android:id="@+id/edit_address_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/et_textSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_phone_number"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_full_name">

                    <sjsu.cmpe277arshia.offermaze.utils.EditText
                        android:id="@+id/edit_address_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/et_textSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_address"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_phone_number">

                    <sjsu.cmpe277arshia.offermaze.utils.EditText
                        android:id="@+id/edit_address_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/et_textSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_zip_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_zip_code"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_address">

                    <sjsu.cmpe277arshia.offermaze.utils.EditText
                        android:id="@+id/edit_address_zip_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/et_textSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_additional_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_additional_note"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_zip_code">

                    <sjsu.cmpe277arshia.offermaze.utils.EditText
                        android:id="@+id/edit_address_additional_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/et_textSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/rg_address_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/add_edit_address_radio_button_height"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_additional_note">

                    <sjsu.cmpe277arshia.offermaze.utils.CustomRadioButton
                        android:id="@+id/rb_home_address"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/add_edit_address_radio_button_height"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_gender_selector"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/lbl_home"
                        android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                        android:textStyle="bold" />

                    <sjsu.cmpe277arshia.offermaze.utils.CustomRadioButton
                        android:id="@+id/rb_office_address"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/add_edit_address_radio_button_height"
                        android:layout_marginStart="@dimen/add_edit_address_radio_button_marginStartEnd"
                        android:layout_marginEnd="@dimen/add_edit_address_radio_button_marginStartEnd"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_gender_selector"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/lbl_office"
                        android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                        android:textStyle="bold" />

                </RadioGroup>

                <sjsu.cmpe277arshia.offermaze.utils.CustomButton
                    android:id="@+id/button_submit_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_background"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_padding"
                    android:paddingBottom="@dimen/btn_padding"
                    android:text="@string/btn_lbl_submit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_textSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rg_address_type" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>